writing model functions - wip

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ Raw Data
 Preliminary Analyses/Plots/
 Preliminary Analyses/Tables/
 Preliminary Analyses/Preliminary-Data-Analysis.html
+Manuscript Analyses/Plots/
+Manuscript Analyses/Tables/
