Knit draft rmd report

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ Preliminary Analyses/Tables/
 Preliminary Analyses/Preliminary-Data-Analysis.html
 Manuscript Analyses/Plots/
 Manuscript Analyses/Tables/
+*.html
