--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Preliminary Analyses/Preliminary-Data-Analysis.html
 Manuscript Analyses/Plots/
 Manuscript Analyses/Tables/
 *.html
+Manuscript Analyses/cleaned_scored.csv
